# my-qmt

./: .gitignore  AGENTS.md  pyproject.toml
.opencode/agents/: a-share-analyst.md  bear-researcher.md  bull-researcher.md  fundamentals-analyst.md  market-analyst.md  news-analyst.md  portfolio-manager.md  research-manager.md  sentiment-analyst.md
.opencode/skills/a-share-analysis/: SKILL.md
.opencode/skills/multi-agent-analysis/: SKILL.md
.opencode/skills/stock-price-api/: SKILL.md
docs/superpowers/specs/: 2026-06-14-中海油服投资决策设计.md
tradingagents/: __init__.py  main.py
tradingagents/agents/: bear_researcher.py  bull_researcher.py  fundamentals_analyst.py  market_analyst.py  news_analyst.py  portfolio_manager.py  research_manager.py  sentiment_analyst.py
tradingagents/dataflows/: __init__.py  a_share_data.py  cache.py  china_news.py  interface.py  social_media.py  tencent_finance.py  y_finance.py  yfinance_fundamentals.py  yfinance_news.py
tradingagents/debate/: framework.py
tradingagents/indicators/: technical.py
tradingagents/memory/: trading_log.py
