[project]
name = "my-qmt"
version = "0.1.0"
description = "Multi-Agent LLM Trading Framework"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.63",
    "pandas>=2.0.0",
    "requests>=2.28.0",
    "pandas-datareader>=0.10.0",
    "quandl>=3.7.0",
    "tushare>=1.4.29",
    "akshare>=1.18.64",
    "baostock>=0.9.2",
]

[project.scripts]
tradingagents = "tradingagents.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tradingagents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
